--- a/src/App.css
+++ b/src/App.css
@@ -1,24 +1,61 @@
-.App {
-  text-align: center;
+.app-container {
+  width: 100vw;
+  min-height: 100vh;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+h1 {
+  background: #78B742 url('/assets/logo.png') no-repeat left center;
+  background-size: 2em;
+  color: #FFFFFF;
+  margin: 0 0 1rem;
+  padding: 1rem 1rem 1rem 2em;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
+h1>a {
+  font-size: 1.2rem;
+  color: #FFFFFF;
 }
 
-.App-intro {
-  font-size: large;
+hr {
+  transform: scaleY(.5);
 }
 
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+input {
+  font-size: 1.2em;
+  padding: .5em 1em;
+  width: 25rem;
+  background: #fafafe;
+}
+
+button {
+  cursor: pointer;
+  background: #78B742;
+  color: #FFFFFF;
+  font-size: 1rem;
+  padding: .5em 1rem;
+  border: 1px solid #6fa93d;
+}
+
+button:hover {
+  background: #82bf4e;
+}
+
+button:active {
+  background: #659a38;
+}
+
+.pass {
+  color: #78B742;
+  font-weight: bold;
+}
+.fail {
+  color: #E84236;
+  font-weight: bold;
+}
+
+.container {
+  padding: 1rem;
 }
